--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.9",
     "next": "15.4.4",
