--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.9",
+    "lucide-react": "^0.539.0",
     "next": "15.4.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "swr": "^2.3.4",
+    "tailwind-merge": "^3.3.1",
+    "use-sound": "^5.0.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
@@ -30,6 +35,7 @@
     "eslint-config-next": "15.4.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5"
   }
 }
